examples/test/testpolicy7309.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7309
  namespace: namespace499
spec:
  podSelector:
    matchLabels:
      key40: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value27
      podSelector:
        matchLabels:
          key5: value42
          key48: value27
          key3: value2
